refactor(notification-domain): 메시지 상수화 구조 적용 #71