@@ -1,7 +1,6 @@
 package com.runky.notification.domain.notification;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -17,19 +16,20 @@ public class NotificationService {
 	private final NotificationRepository notificationRepository;
 
 	@Transactional
-	public void record(NotificationCommand.Record command) {
-		Notification notification = Notification.record(command.senderId(), command.receiverId(), command.title(),
-			command.message());
+	public void recordsByTemplate(NotificationCommand.RecordByTemplate command) {
+		Notification notification = Notification.of(
+			command.senderId(), command.receiverId(), command.template(), command.variables());
 		notificationRepository.save(notification);
 	}
 
 	//TODO: 배치 저장
 	@Transactional
-	public void records(NotificationCommand.Records command) {
-		List<Notification> notifications = command.receiverIds().stream()
-			.map(receiverId -> Notification.record(command.senderId(), receiverId, command.title(), command.message()))
-			.collect(Collectors.toList());
-		notificationRepository.saveAll(notifications);
+	public void recordsByTemplate(NotificationCommand.RecordsByTemplate command) {
+
+		List<Notification> list = command.receiverIds().stream()
+			.map(receiverId -> Notification.of(command.senderId(), receiverId, command.template(), command.variables()))
+			.toList();
+		notificationRepository.saveAll(list);
 	}
 
 	@Transactional(readOnly = true)
@@ -41,7 +41,8 @@ public class NotificationService {
 
 		var values = notificationPage.getContent().stream()
 			.map(n -> new NotificationInfo.Summary(
-				n.getId(), n.getTitle(), n.getMessage(), n.getSenderId(), n.isRead(), n.getCreatedAt().toInstant()
+				n.getId(), n.getTitle(), n.getMessage(), n.getSenderId(), n.isRead(), n.getCreatedAt().toInstant(),
+				n.getTemplate(), n.getVariables()
 			))
 			.toList();
 		return new NotificationInfo.Summaries(values);
